<package format="2">
  <name>cram_open_bottle_plans</name>
  <version>0.7.0</version>
  <description>
     cram_open_bottle_plans
  </description>
  <author>Luca Krohm</author>
  <maintainer email="luc_kro@uni-bremen.de">Luca Krohm</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cl_transforms</depend>
  <depend>cl_transforms_stamped</depend>
  <depend>roslisp</depend>
  <depend>roslisp_utilities</depend>
  <depend>cram_language</depend>
  <depend>cram_prolog</depend>
  <depend>cram_designators</depend>
  <depend>cram_occasions_events</depend>
  <depend>cram_executive</depend>
  <depend>cram_utilities</depend>

  <depend>cram_tf</depend>
  <depend>cram_common_failures</depend>
  <depend>cram_manipulation_interfaces</depend>
  <depend>cram_robot_interfaces</depend>
  <depend>cram_plan_occasions_events</depend>
</package>
